--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 body {
 font-family: "Poppins";
-background-color: rgba(255, 248, 231, 1);
+background-color:rgb(237,228,219);
 
 }
 
@@ -20,6 +20,7 @@ grid-gap:64px ;
 .img-responsive {
 width: 100%; 
 display: block;
+
 }
 
 
@@ -52,20 +53,7 @@ display: block;
 .card-footer {
     padding: 0 20px 20px;
 }
-.btn {
-    display: block;
-    color: white;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 21px;
-    text-align: center;
-    letter-spacing: 3px;
-    text-transform: uppercase;
-    padding: 16px;
-    background-color: #462cb3;
-    text-decoration: none;
 
-}
 
 section {
 max-width: 100%;
@@ -77,12 +65,15 @@ text-align: center;
 section.secondary {background-color: #f8f8f8;}
 
 header { 
-background-color:rgba(164, 214, 94, 1);
-
+background-color:rgb(196,155,138);
+background-repeat: no-repeat;
 background-size: cover;
+
+
 color: white;
 text-align: center;
 padding: 200px 0;
+
 }
 
 header h1 {
@@ -120,6 +111,8 @@ color: #272044;
 display: inline-block;
 margin-top: 32px;
 padding: 16px 32px; }
+
+
 
 
 main { 
@@ -171,7 +164,7 @@ opacity: 0.7;
 
 footer{
 color: white;
-background-image:linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('../images/FooterImg.jpg');
+background-color:rgb(196,155,138);
  background-repeat: no-repeat;
 background-size: cover;
 }
